--- a/index.html
+++ b/index.html
@@ -3,20 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>2048 - the game on vanilla js</title>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
-<div>
-    The game
-</div>
-    <div id="game-2048">
-        The game should be here. If you see this text, then something went wrong.
+<div class="page">
+    <div class="page-title">
+        <h1>2048 - the native game</h1>
     </div>
-    <script type="module">
-        import createDefaultGame from "./js/index.js";
 
-        document.addEventListener("DOMContentLoaded", () => {
-            createDefaultGame(document.getElementById("game-2048"));
-        });
-    </script>
+    <div class="game-container">
+        <div id="game-2048">
+            The game should be here. If you see this text, then something went wrong.
+        </div>
+    </div>
+</div>
+<div class="footer">
+    <div class="footer-text">
+        Like the game? Hate the game? Got a question? Find me on <a href="https://t.me/zipper2110">telegram</a>
+    </div>
+</div>
+<script type="module">
+    import createDefaultGame from "./js/index.js";
+
+    document.addEventListener("DOMContentLoaded", () => {
+        createDefaultGame(document.getElementById("game-2048"));
+    });
+</script>
 </body>
 </html>
